# docs-rag

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  Dockerfile  LICENSE  Makefile  README.md  compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  eval.yml
backend/docs_rag/: __init__.py  config.py  deps.py  main.py
backend/docs_rag/api/: citation.py  evals.py  health.py  ingest.py  query.py
backend/docs_rag/ingest/: __init__.py  chunk.py  parse.py  pipeline.py
backend/docs_rag/observability/: __init__.py  cache.py  cost_guard.py  logging.py  pricing.py  security.py  tracing.py
backend/docs_rag/providers/: __init__.py  anthropic.py  base.py  cohere.py  jina.py  mocks.py  qdrant.py
backend/docs_rag/retrieval/: __init__.py  bm25.py  hybrid.py  rrf.py
backend/docs_rag/synthesis/: __init__.py  citation_enforcer.py  prompts.py  schema.py  synthesizer.py
backend/prompts/: repair.v1.md  synthesis.v1.md
backend/tests/: conftest.py
backend/tests/integration/: test_anthropic_client.py  test_api_flow.py  test_cohere_client.py  test_jina_client.py  test_qdrant_store.py
backend/tests/unit/: test_bm25.py  test_cache.py  test_chunk.py  test_citation_enforcer.py  test_cost_guard.py  test_eval_metrics.py  test_hybrid.py  test_mocks.py  test_parse_html.py  test_pricing.py  test_prompts.py  test_rrf.py  test_security.py  test_synthesizer.py  test_tracing.py
evals/: README.md  diff.py  golden_set.jsonl  human_labels.jsonl  judge.py  run.py
evals/metrics/: calibration.py  citation_accuracy.py
evals/reports/: latest.json
evals/tests/: test_diff.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/eval/: page.tsx
frontend/components/demo/: answer-pane.tsx  citation-list.tsx  demo-section.tsx  question-input.tsx  sample-picker.tsx  source-panel.tsx  trace-bar.tsx
frontend/components/eval/: dashboard.tsx  difficulty-grid.tsx  run-metadata.tsx  score-card.tsx
frontend/components/hero/: hero.tsx
frontend/components/sections/: features.tsx
frontend/components/shared/: footer.tsx  nav.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/lib/: animations.ts  api.ts  samples.ts
