[project]
name = "docs-rag"
version = "0.1.0"
description = "Production RAG over custom documents with citation enforcement and continuous eval"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Amir Dhibi", email = "amir10.dhibi@gmail.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.39.0",
    "cohere>=5.13.0",
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "pdfplumber>=0.11.4",
    "unstructured[pdf]>=0.16.0",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "redis>=5.2.0",
    "numpy>=2.1.0",
    "tiktoken>=0.8.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.1",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-aiofiles>=24.1.0",
    "freezegun>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/docs_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "ASYNC",
    "S",
    "N",
    "C4",
    "SIM",
    "RUF",
    "PL",
    "PTH",
]
ignore = [
    "S101",      # asserts in tests are fine
    "PLR0913",   # too-many-arguments. kwargs-only signatures are explicit
    "PLR2004",   # magic numbers in tests/eval thresholds are intentional
    "PLC0415",   # local imports inside functions: intentional for lazy env config
    "BLE001",    # blind except in /readyz is on purpose (probe must never crash)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S", "PLR"]
"evals/**" = ["S", "PLR"]

[tool.ruff.lint.isort]
known-first-party = ["docs_rag"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
mypy_path = "backend"
packages = ["docs_rag"]

[[tool.mypy.overrides]]
module = [
    "rank_bm25.*",
    "pdfplumber.*",
    "unstructured.*",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "evals/tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=docs_rag",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=75",
]
markers = [
    "integration: integration tests using respx-mocked HTTP clients",
    "slow: slow tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["backend/docs_rag"]
omit = ["backend/tests/*", "backend/docs_rag/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
